<resources>
    <string name="app_name">宠物猫</string>
    <string name="string_login_or_register">登陆/注册</string>
    <string name="string_agree_register_protocol">登陆注册表示同意</string>
    <string name="string_us_protocol">树莓用户使用协议、隐私政策</string>
    <string name="string_login">登陆</string>
    <string name="string_vertify_code">请输入验证码</string>
    <string name="string_get_vertify_code">获取验证码</string>
    <string name="app_lg_digits_pwd">QWERTYUIOPLKJHGFDSAZXCVBNMqwertyuioplkjhgfdsazxcvbnm0123456789</string>
    <string name="app_ip_rl_po">请输入正确的手机号</string>
    <string name="string_fd_send_vft">获取验证码</string>
    <string name="string_first_fg_title">首页</string>
    <string name="string_second_fg_title">关注</string>
    <string name="string_you_kind">你觉得呢</string>
    <string name="string_download">下载</string>
    <string name="string_test">查看测评></string>
    <string name="string_comments">评论</string>
    <string name="string_collection">收藏</string>
    <string name="string_delete"><u>删除</u></string>
    <string name="app_no_more">没有更多数据了</string>
    <string name="string_report">举报</string>
    <string name="string_report_ad">垃圾广告营销</string>
    <string name="string_report_chaofeng">嘲讽/不友善内容</string>
    <string name="string_report_wuru">侮辱谩骂骚扰</string>
    <string name="string_report_yinhui">淫秽色情信息</string>
    <string name="string_report_weifa">违法有害信息</string>
    <string name="string_report_chaoxi">内容涉嫌抄袭/盗用</string>
    <string name="string_report_other">其他</string>
    <string name="tip_downloading">正在下载小财神最新版</string>
    <string name="download_s">下载完成</string>
    <string name="string_complete">完成</string>
    <string name="string_download_progress">正在下载%1$s</string>
    <string name="p_download">准备下载</string>
    <string name="tip_downloadfaild">文件下载失败</string>
    <string name="no_rom_p">SD卡读写权限被禁</string>
    <string name="app_up_v">%1$s更新</string>
    <string name="string_collection_success">收藏成功</string>
    <string name="string_follow">关注</string>
    <string name="string_add_follow">+关注</string>
    <string name="string_cancle">取消</string>
    <string name="string_mine">我的</string>
    <string name="string_no_fans">暂无粉丝</string>
    <string name="string_no_follows">还没有关注的人</string>
    <string name="string_no_datas">没有更多了</string>
    <string name="string_request_fails">网络请求失败</string>
    <string name="string_net_errors">网络层错误</string>
    <string name="string_complete_data">完善资料</string>
    <string name="string_share_to">分享到</string>
    <string name="string_copy_url_ok">您已成功复制链接到剪贴板</string>
    <string name="string_wechat">微信好友</string>
    <string name="string_wechat_friend">朋友圈</string>
    <string name="string_sina">新浪微博</string>
    <string name="string_qq">QQ好友</string>
    <string name="string_qq_zone">QQ空间</string>
    <string name="string_copy">复制链接</string>
    <string name="string_have_new_version">发现新版本</string>
    <string name="string_upgrade_now">立即升级</string>
    <string name="string_behavior_sample_title">com.lieying.socialappstore.behavior.SampleTitleBehavior</string>
    <string name="string_is_delete">确定删除吗?</string>
    <string name="string_sure">确定</string>
    <string name="beauty_setting_pannel_beauty_beauty">美颜</string>
    <string name="beauty_setting_pannel_beauty_whitening">美白</string>
    <string name="beauty_setting_pannel_beauty_ruddy">红润</string>
    <string name="beauty_setting_pannel_beauty_big_eye">大眼</string>
    <string name="beauty_setting_pannel_beauty_thin_face">瘦脸</string>
    <string name="beauty_setting_pannel_beauty_v_face">V脸</string>
    <string name="beauty_setting_pannel_beauty_chin">下巴</string>
    <string name="beauty_setting_pannel_beauty_short_face">短脸</string>
    <string name="beauty_setting_pannel_beauty_small_nose">小鼻</string>
    <string name="beauty_setting_pannel_style">风格</string>
    <string name="beauty_setting_pannel_beauty">美颜</string>
    <string name="beauty_setting_pannel_filter">滤镜</string>
    <string name="beauty_setting_pannel_dynamic_effect">动效</string>
    <string name="beauty_setting_pannel_key">抠背</string>
    <string name="beauty_setting_pannel_green_screen">绿幕</string>
    <string name="beauty_setting_pannel_style_smooth">美颜(光滑)</string>
    <string name="beauty_setting_pannel_style_natural">美颜(自然)</string>
    <string name="beauty_setting_pannel_style_hazy">美颜(天天P图)</string>
    <string name="beauty_setting_pannel_filter_none">无</string>
    <string name="beauty_setting_pannel_filter_standard">标准</string>
    <string name="beauty_setting_pannel_filter_cheery">樱红</string>
    <string name="beauty_setting_pannel_filter_cloud">云裳</string>
    <string name="beauty_setting_pannel_filter_pure">纯真</string>
    <string name="beauty_setting_pannel_filter_orchid">白兰</string>
    <string name="beauty_setting_pannel_filter_vitality">元气</string>
    <string name="beauty_setting_pannel_filter_super">超脱</string>
    <string name="beauty_setting_pannel_filter_fragrance">香氛</string>
    <string name="beauty_setting_pannel_filter_romantic">浪漫</string>
    <string name="beauty_setting_pannel_filter_fresh">清新</string>
    <string name="beauty_setting_pannel_filter_beautiful">唯美</string>
    <string name="beauty_setting_pannel_filter_pink">粉嫩</string>
    <string name="beauty_setting_pannel_filter_reminiscence">怀旧</string>
    <string name="beauty_setting_pannel_filter_blues">蓝调</string>
    <string name="beauty_setting_pannel_filter_cool">清凉</string>
    <string name="beauty_setting_pannel_filter_Japanese">日系</string>
    <string name="beauty_setting_pannel_dynamic_effect_none">无</string>
    <string name="beauty_setting_pannel_dynamic_effect_boom">Boom</string>
    <string name="beauty_setting_pannel_dynamic_effect_neon_mouse">霓虹鼠</string>
    <string name="beauty_setting_pannel_dynamic_effect_star_ear">星耳</string>
    <string name="beauty_setting_pannel_dynamic_effect_crazy_cheer_up">疯狂打call</string>
    <string name="beauty_setting_pannel_dynamic_effect_Q_cancelonstellation">Q星座</string>
    <string name="beauty_setting_pannel_dynamic_effect_colored_ribbon">彩色丝带</string>
    <string name="beauty_setting_pannel_dynamic_effect_bands_hairband">刘海发带</string>
    <string name="beauty_setting_pannel_dynamic_effect_change_face">变脸</string>
    <string name="beauty_setting_pannel_dynamic_effect_purple_kitten">紫色小猫</string>
    <string name="beauty_setting_pannel_dynamic_effect_flower_faerie">花仙子</string>
    <string name="beauty_setting_pannel_dynamic_effect_little_Princess">小公举</string>
    <string name="beauty_setting_pannel_green_screen_none">无</string>
    <string name="beauty_setting_pannel_green_screen_good_luck">Good luck</string>
    <string name="beauty_setting_pannel_key_none">无动效</string>
    <string name="beauty_setting_pannel_key_AI_key">AI抠背</string>
    <string name="video_material_download_progress_material_unzip_failed">素材解压失败</string>
    <string name="video_material_download_progress_download_failed">下载失败</string>
    <string name="video_material_download_progress_no_enough_storage_space">存储空间不足</string>
    <string name="bgm_start_position">当前从%1$s开始</string>
    <string name="float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>
    <string name="tc_utils_check_float_window_permission_yes">开启</string>
    <string name="tc_utils_check_float_window_permission_no">不，谢谢</string>
    <string name="sound_effect_pannel_change_voice">变声</string>
    <string name="sound_effect_pannel_record_reverb">混响</string>
    <string name="layout_sound_effect_original_sound2">原声</string>
    <string name="layout_sound_effect_wild_kid">熊孩子</string>
    <string name="layout_sound_effect_lolita">萝莉</string>
    <string name="layout_sound_effect_uncle">大叔</string>
    <string name="layout_sound_effect_heavy_metal">重金属</string>
    <string name="layout_sound_effect_foreigner">外国人</string>
    <string name="layout_sound_effect_beast">困兽</string>
    <string name="layout_sound_effect_fat_boy">死肥仔</string>
    <string name="layout_sound_effect_heavy_current">强电流</string>
    <string name="layout_sound_effect_heavy_machine">重机械</string>
    <string name="layout_sound_effect_vacant">空灵</string>
    <string name="layout_sound_effect_ktv">KTV</string>
    <string name="layout_sound_effect_original_sound">原声</string>
    <string name="layout_sound_effect_room">房间</string>
    <string name="layout_sound_effect_hall">会堂</string>
    <string name="layout_sound_effect_deep">低沉</string>
    <string name="layout_sound_effect_loud">洪亮</string>
    <string name="layout_sound_effect_magnetic">磁性</string>
    <string name="activity_video_record_take_photo_success">拍照成功，已存到系统相册</string>
    <string name="tips">提示</string>
    <string name="delete_bgm_or_not">确定清除已添加的背景音乐？</string>
    <string name="confirm_delete">确定清除</string>
    <string name="tc_video_record_activity_start_record_start_record_ok">开始录制成功</string>
    <string name="tc_video_record_activity_start_record_start_record_err_is_in_recording">存在未完成的任务</string>
    <string name="tc_video_record_activity_start_record_start_record_err_video_path_is_empty">视频文件路径为空</string>
    <string name="tc_video_record_activity_start_record_start_record_err_api_is_lower_than_18">版本小于18</string>
    <string name="tc_video_record_activity_start_record_start_record_err_not_init">还未初始化结束</string>
    <string name="tc_video_record_activity_start_record_start_record_err_licence_verification_failed">licence校验失败</string>
    <string name="tc_video_record_activity_start_record_record_failed_tip">录制失败，错误码：</string>
    <string name="tc_video_record_activity_on_record_event_evt_camera_cannot_use">摄像头打开失败，请检查权限</string>
    <string name="tc_video_record_activity_on_record_event_evt_mic_cannot_use">麦克风打开失败，请检查权限</string>
    <string name="tc_video_record_activity_on_record_complete_fail_tip">录制失败，原因：</string>
    <string name="tc_video_record_activity_on_record_complete_synthesizing">正在合成...</string>
    <string name="tc_video_record_activity_on_join_progress_synthesizing">正在合成</string>
    <string name="tc_video_record_activity_on_join_complete_synthesis_failed">合成失败</string>
    <string name="tc_video_record_activity_on_request_permissions_result_failed_to_get_permission">获取权限失败</string>
    <string name="unit_second">秒</string>
    <string name="cancel_record">取消拍摄</string>
    <string name="confirm_cancel_edit_content">确认放弃当前编辑的内容？</string>
    <string name="confirm_cancel_record_content">确认放弃当前拍摄的内容？</string>
    <string name="wrong_click">点错了</string>
    <string name="give_up">放弃</string>
    <string name="activity_video_record_take_photo">拍照</string>
    <string name="activity_video_record_click_start">单击拍</string>
    <string name="activity_video_record_long_touch">本地</string>
    <string name="activity_video_record_timer">倒计时</string>
    <string name="activity_video_record_sound_effect">音效</string>
    <string name="speed_very_slow">极慢</string>
    <string name="speed_slow">慢速</string>
    <string name="speed_normal">标准</string>
    <string name="speed_fast">快速</string>
    <string name="speed_very_fast">极快</string>
    <string name="next_step">下一步</string>
    <string name="aspect">屏比</string>
    <string name="select_bgm">选择背景音乐</string>
    <string name="mic_volume">录音音量</string>
    <string name="bgm_volume">背景音乐音量</string>
    <string name="tc_video_preprocess_activity_an_unknown_error_occurred_the_path_cannot_be_empty">发生未知错误,路径不能为空</string>
    <string name="tc_video_preprocess_activity_video_preprocessing">视频预处理中...</string>
    <string name="tc_video_preprocess_activity_cancel_preprocessing">取消预处理</string>
    <string name="tc_video_preprocess_activity_edit_failed">编辑失败</string>
    <string name="tc_static_filter_fragment_original">原图</string>
    <string name="tc_static_filter_fragment_standard">标准</string>
    <string name="tc_static_filter_fragment_cheery">樱红</string>
    <string name="tc_static_filter_fragment_cloud">云裳</string>
    <string name="tc_static_filter_fragment_pure">纯真</string>
    <string name="tc_static_filter_fragment_orchid">白兰</string>
</resources>