<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/share_board_title"
        android:layout_marginBottom="@dimen/dimens_5dp">

        <TableRow
            android:layout_marginTop="@dimen/dimens_15dp">

            <TextView
                android:background="@drawable/selected_normal_click_bg"
                android:id="@+id/we_chat_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_wechat"
                android:drawablePadding="@dimen/share_drawable_padding"
                android:gravity="center"
                android:text="@string/string_wechat"
                android:textColor="@color/text_color_normal"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:background="@drawable/selected_normal_click_bg"
                android:id="@+id/we_chat_friend_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_friends"
                android:drawablePadding="@dimen/share_drawable_padding"
                android:gravity="center"
                android:text="@string/string_wechat_friend"
                android:textColor="@color/text_color_normal"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:background="@drawable/selected_normal_click_bg"
                android:id="@+id/qq_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_qq"
                android:drawablePadding="@dimen/share_drawable_padding"
                android:gravity="center"
                android:text="@string/string_qq"
                android:textColor="@color/text_color_normal"
                android:textSize="@dimen/text_size_small" />
        </TableRow>

        <TableRow>


            <TextView
                android:background="@drawable/selected_normal_click_bg"
                android:id="@+id/qq_zone_share"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/share_btn_margin_top"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_qq_zone"
                android:drawablePadding="@dimen/share_drawable_padding"
                android:gravity="center"
                android:text="@string/string_qq_zone"
                android:textColor="@color/text_color_normal"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:background="@drawable/selected_normal_click_bg"
                android:id="@+id/sina_share"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/share_btn_margin_top"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_weibo"
                android:drawablePadding="@dimen/share_drawable_padding"
                android:gravity="center"
                android:text="@string/string_sina"
                android:textColor="@color/text_color_normal"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:background="@drawable/selected_normal_click_bg"
                android:id="@+id/copy_share"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/share_btn_margin_top"
                android:layout_weight="1"
                android:drawableTop="@drawable/btn_copy"
                android:drawablePadding="@dimen/share_drawable_padding"
                android:gravity="center"
                android:text="@string/string_copy"
                android:textColor="@color/text_color_normal"
                android:textSize="@dimen/text_size_small" />
        </TableRow>
    </TableLayout>
</RelativeLayout>