<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="242dp"
    android:layout_height="107dp"
    android:background="@drawable/bg_dialog_upload_progress">

    <TextView
        android:id="@+id/tv_dialog_delete_tip"
        android:layout_width="242dp"
        android:layout_height="@dimen/dimens_60dp"
        android:gravity="center"
        android:text="@string/string_is_delete"
        android:textColor="@color/color_303030"
        android:textSize="@dimen/dimens_19sp" />
    <View
        android:layout_below="@+id/tv_dialog_delete_tip"
        android:background="@color/color_eeeeee"
        android:layout_width="242dp"
        android:layout_height="1px"
        />

    <LinearLayout
        android:layout_below="@+id/tv_dialog_delete_tip"
        android:layout_width="242dp"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_dialog_delete_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_cancle"
            android:textColor="@color/color_2f94ea" />
        <View
            android:background="@color/color_eeeeee"
            android:layout_width="@dimen/dimens_1px"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/tv_dialog_delete_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_sure"
            android:textColor="@color/color_fb716b" />
    </LinearLayout>
</RelativeLayout>