<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/iv_login_back"
            android:padding="@dimen/dimens_5dp"
            android:layout_marginLeft="@dimen/dimens_10dp"
            android:src="@drawable/ic_button_del"
            android:layout_width="@dimen/dimens_30dp"
            android:layout_height="@dimen/dimens_30dp" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimens_30dp"
        android:src="@drawable/ic_login_button_head_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimens_11dp"
        android:text="@string/string_login_or_register"
        android:textColor="@color/color_303030"
        android:textSize="@dimen/dimens_24sp" />

    <LinearLayout
        android:layout_marginTop="@dimen/dimens_10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_agree_register_protocol"
            android:textColor="@color/color_707070"
            android:textSize="@dimen/dimens_11sp"
             />

        <TextView
            android:id="@+id/tv_login_procy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/string_us_protocol"
            android:layout_marginLeft="@dimen/dimens_5dp"
            android:textColor="@color/color_1296db"
            android:paddingTop="@dimen/dimens_5dp"
            android:paddingBottom="@dimen/dimens_5dp"
            android:textSize="@dimen/dimens_11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimens_45dp"
            android:paddingLeft="22dp"
            android:paddingRight="33dp">

            <TextView
                android:id="@+id/tv_ac_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="输入手机号"
                android:layout_marginLeft="9dp"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/dimens_12sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="请输入你的手机号"
                android:inputType="number"
                android:layout_marginLeft="9dp"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/color_common_black"
                android:textColorHint="@color/text_color_gray"
                android:textSize="@dimen/dimens_15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_vertical_divider_size"
                android:background="@color/border_color_task_tag" />

            <TextView
                android:id="@+id/tv_code_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="9dp"
                android:text="输入验证码"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/dimens_12sp"
                android:visibility="invisible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="33dp">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="9dp"
                    android:layout_toLeftOf="@+id/tv_send_vft"
                    android:background="@color/white"
                    android:digits="@string/app_lg_digits_pwd"
                    android:hint="@string/string_vertify_code"
                    android:textColor="@color/color_common_black"
                    android:textColorHint="@color/text_color_gray"
                    android:textSize="@dimen/dimens_15sp" />

                <TextView
                    android:id="@+id/tv_send_vft"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="@dimen/dimens_10dp"
                    android:enabled="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/string_get_vertify_code"
                    android:textColor="@color/color_94fb716b"
                    android:textSize="@dimen/dimens_13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_vertical_divider_size"
                    android:layout_alignParentBottom="true"
                    android:background="@color/border_color_task_tag" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_vertical_divider_size"
                android:background="@color/border_color_task_tag" />
            <LinearLayout
                android:id="@+id/ll_register"
                android:layout_width="124dp"
                android:layout_height="33dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="47dp"
                android:background="@drawable/bg_register_login"
                android:enabled="false"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimens_18sp" />

                <ImageView
                    android:id="@+id/iv_anim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/icon_waiting"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>